tests/samples/failing/10_while_condition_not_bool.mlang
// Condition must be boolean.
while 1 {
    println("bad loop");
}